--- a/src/css/default-css.scss
+++ b/src/css/default-css.scss
@@ -682,7 +682,7 @@ ul {
     background-image: url(../images/extra-feature-bg.jpg);
 }
 .map-image {
-    background-image: url(../images/map-color-overlay.png);
+    background-image: url(../../public/map.png);
 }
 
 
