--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -348,7 +348,7 @@ a:focus {
 }
 
 .btn.btn-fill {
-  background-color: #0bceaf;
+  background-color: #E8B072;
   color: #fff;
 }
 
@@ -596,7 +596,6 @@ ul li {
 
 .section-separator {
   padding: 60px 0;
-  padding-top: 100px;
 }
 
 .home-section-separator {
@@ -850,7 +849,7 @@ button:focus {
 
 .white-vertion .page-item.active .page-link {
   background-color: #fff;
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .white-vertion .page-item .page-link {
@@ -876,13 +875,13 @@ button:focus {
   opacity: 0.8;
 }
 
-.white-vertion .mh-header .navbar-nav li.active a {
+.white-vertion .mh-header .navbar-nav a.active li a {
   padding-right: 0;
   padding-left: 0;
   border-color: #000;
 }
 
-.white-vertion .mh-header.nav-3 .navbar-nav li.active a {
+.white-vertion .mh-header.nav-3 .navbar-nav a.active li a {
   border-color: transparent;
 }
 
@@ -999,7 +998,7 @@ button:focus {
   color: #000;
 }
 
-.white-vertion .mh-header.white-header.nav-strict .navbar-nav li.active a {
+.white-vertion .mh-header.white-header.nav-strict .navbar-nav a.active li a {
   border-color: #000;
 }
 
@@ -1008,7 +1007,7 @@ button:focus {
   opacity: 0.9;
 }
 
-.white-vertion .mh-header.white-header .navbar-nav li.active a {
+.white-vertion .mh-header.white-header .navbar-nav a.active li a {
   border-color: #fff;
 }
 
@@ -1111,7 +1110,7 @@ button:focus {
 .dark-vertion .page-item.active .page-link {
   background-color: #fff;
   border-color: #fff;
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .dark-vertion .navbar-toggler .icon,
@@ -1120,13 +1119,13 @@ button:focus {
   background-color: #fff;
 }
 
-.dark-vertion .mh-header .navbar-nav li.active a {
+.dark-vertion .mh-header .navbar-nav a.active li a {
   border-color: #fff;
   padding-right: 0;
   padding-left: 0;
 }
 
-.dark-vertion .mh-header.nav-3 .navbar-nav li.active a {
+.dark-vertion .mh-header.nav-3 .navbar-nav a.active li a {
   border-color: transparent;
 }
 
@@ -1391,7 +1390,7 @@ li .fa {
 }
 
 .mh-header .navbar-nav li a:hover {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .nav-3 .navbar-dark .navbar-nav .nav-link a {
@@ -1468,7 +1467,7 @@ li .fa {
 }
 
 .mh-home-2 .mh-header-info ul.mh-home-contact li:hover .fa {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-home-2 .mh-header-info .mh-about-tag {
@@ -1494,7 +1493,7 @@ li .fa {
 }
 
 .mh-home .mh-header-info .mh-promo span {
-  background-color: #0bceaf;
+  background-color: #E8B072;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 1px;
@@ -1538,7 +1537,7 @@ li .fa {
 }
 
 .mh-home .mh-header-info ul li:hover .fa {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-home .mh-header-info .social-icon {
@@ -1643,7 +1642,7 @@ li .fa {
 }
 
 .mh-about-tag ul li span {
-  border: 1px solid #0bceaf;
+  border: 1px solid #E8B072;
   padding: 4px 10px;
   border-radius: 4px;
 }
@@ -1725,7 +1724,7 @@ li .fa {
 }
 
 .mh-progress path:nth-child(2) {
-  stroke: #0bceaf;
+  stroke: #E8B072;
 }
 
 .candidatos {
@@ -1783,7 +1782,7 @@ li .fa {
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  background: #0bceaf;
+  background: #E8B072;
   -webkit-transition: 3s all;
   -webkit-animation-duration: 3s;
   -webkit-animation-name: animationProgress;
@@ -1845,12 +1844,12 @@ li .fa {
 .mh-experince .mh-education-deatils .mh-education-item h4 a {
   font-style: italic;
   margin-left: 4px;
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-experince .mh-education-deatils .mh-education-item .mh-eduyear {
   margin: 10px 0;
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-experince .mh-education-deatils .mh-education-item p {
@@ -1898,12 +1897,12 @@ li .fa {
 }
 
 .mh-work .mh-experience-deatils .mh-work-item h4 a {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-work .mh-experience-deatils .mh-work-item .mh-eduyear {
   margin: 10px 0;
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-work .mh-experience-deatils .mh-work-item span {
@@ -1946,11 +1945,11 @@ li .fa {
 }
 
 .portfolio-nav ul li:hover {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
-.portfolio-nav ul li.active {
-  color: #0bceaf;
+.portfolio-nav ul a.active li {
+  color: #E8B072;
 }
 
 .mh-portfolio-modal {
@@ -2035,7 +2034,7 @@ li .fa {
 .mh-pricing .mh-pricing h5 {
   font-size: 36px;
   line-height: 40px;
-  color: #0bceaf;
+  color: #E8B072;
   margin-bottom: 20px;
   margin-top: 20px;
 }
@@ -2088,7 +2087,7 @@ li .fa {
 }
 
 .mh-blog .mh-blog-item .blog-inner a {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-blog .mh-blog-item img {
@@ -2104,7 +2103,7 @@ li .fa {
 }
 
 .mh-blog .mh-blog-item h2 a {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-blog .mh-blog-item h2 a:hover {
@@ -2215,7 +2214,7 @@ li .fa {
   width: inherit;
   float: none;
   margin: 0 auto;
-  border: 5px solid #0bceaf;
+  border: 5px solid #E8B072;
   margin: 0 auto;
   margin-bottom: 20px;
   border-radius: 50%;
@@ -2266,14 +2265,14 @@ li .fa {
 .mh-testimonial .owl-controls .owl-dots .owl-dot {
   height: 15px;
   width: 15px;
-  border: 1px solid #0bceaf;
+  border: 1px solid #E8B072;
   display: inline-block;
   border-radius: 50%;
   margin-right: 10px;
 }
 
 .mh-testimonial .owl-controls .owl-dots .owl-dot.active {
-  background-color: #0bceaf;
+  background-color: #E8B072;
 }
 
 /*
@@ -2375,7 +2374,7 @@ li .fa {
   border-radius: 50%;
   line-height: 100px;
   font-size: 20px;
-  border-color: #0bceaf;
+  border-color: #E8B072;
 }
 
 /*
@@ -2514,7 +2513,7 @@ li .fa {
   z-index: 990;
   margin-top: 0px;
   padding: 0;
-  background-color: #0bceaf;
+  background-color: #E8B072;
   transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -o-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -ms-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
@@ -2647,7 +2646,7 @@ li .fa {
 }
 
 .old .navbar-header .navbar-toggler .icon-bar {
-  background-color: #0bceaf;
+  background-color: #E8B072;
   -webkit-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out;
   -webkit-font-smoothing: antialiased;
@@ -2684,7 +2683,7 @@ li .fa {
   z-index: 990;
   margin-top: 0px;
   padding: 0;
-  background-color: #0bceaf;
+  background-color: #E8B072;
   transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -o-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -ms-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
@@ -2733,7 +2732,7 @@ li .fa {
   color: #fff;
 }
 
-.old .navbar-collapse .nav li.active {
+.old .navbar-collapse .nav a.active li {
   color: #fff;
 }
 
@@ -2778,7 +2777,7 @@ li .fa {
   z-index: 990;
   margin-top: 0px;
   padding: 0;
-  background-color: #0bceaf;
+  background-color: #E8B072;
   transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -o-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -ms-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
@@ -2911,7 +2910,7 @@ li .fa {
 }
 
 .new .navbar-header .navbar-toggler .icon-bar {
-  background-color: #0bceaf;
+  background-color: #E8B072;
   -webkit-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out;
   -webkit-font-smoothing: antialiased;
@@ -2948,7 +2947,7 @@ li .fa {
   z-index: 990;
   margin-top: 0px;
   padding: 0;
-  background-color: #0bceaf;
+  background-color: #E8B072;
   transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -o-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
   -ms-transform: translateX(-100%) translateY(0) translateZ(0) rotate(0deg) scale(1);
@@ -2997,7 +2996,7 @@ li .fa {
   color: #fff;
 }
 
-.new .navbar-collapse .nav li.active {
+.new .navbar-collapse .nav a.active li {
   color: #fff;
 }
 
@@ -3047,7 +3046,7 @@ li .fa {
 }
 
 .portfolio-nav ul li.current span {
-  border-bottom: 2px solid #0bceaf;
+  border-bottom: 2px solid #E8B072;
 }
 
 .mh-project-gallery .grid-item figure {
@@ -3255,7 +3254,7 @@ li .fa {
 
 .mh-featured-project .mh-featured-item .mh-featured-project-content .project-category {
   font-size: 14px;
-  color: #0bceaf;
+  color: #E8B072;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 600;
@@ -3319,14 +3318,14 @@ li .fa {
 .mh-single-project-slide .owl-controls .owl-dots .owl-dot {
   height: 15px;
   width: 15px;
-  border: 1px solid #0bceaf;
+  border: 1px solid #E8B072;
   display: inline-block;
   border-radius: 50%;
   margin-right: 10px;
 }
 
 .mh-single-project-slide .owl-controls .owl-dots .owl-dot.active {
-  background-color: #0bceaf;
+  background-color: #E8B072;
 }
 
 .mh-single-project-slide-by-side .owl-next {
@@ -3400,7 +3399,7 @@ li .fa {
 }
 
 .mh-service .mh-service-item a {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-service .mh-service-item a .fa {
@@ -3435,7 +3434,7 @@ BLOG Pagination
 }
 
 .mh-pagination .page-link:hover {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-pagination .page-item:last-child .page-link {
@@ -3507,7 +3506,7 @@ BLOG Pagination
 }
 
 .mh-author-info .social-icon li a:hover {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-blog-category h4 {
@@ -3521,7 +3520,7 @@ BLOG Pagination
 }
 
 .mh-blog-category ul li a:hover {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-blog-insta ul li {
@@ -3568,7 +3567,7 @@ BLOG Pagination
 }
 
 .mh-blog-next-prev-post a {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .mh-blog-next-prev-post a .fa {
@@ -3608,7 +3607,7 @@ BLOG Pagination
 }
 
 .comment-deatils span {
-  color: #0bceaf;
+  color: #E8B072;
 }
 
 .single-comment {
