--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	margin: 0;
+  margin: 0;
+  color:black !important;
 	background: #eceff1;
 }
 
