--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,21 +100,41 @@ body {
   opacity: 0.9;
 }
 
+.svg-test {
+  padding: 12rem 0 2rem 0;
+  background-image: url('../svg/back.svg');
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+
+  @media (max-width: 1960px) {
+    padding: 14rem 0 4rem;
+  }
+}
+
+.footer-text{
+  color: #000 !important;
+}
 
 
-body::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track {
   background: #1e1e24
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 0.25rem;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background: #E8B072
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "roboto", sans-serif;
 }
 
@@ -191,8 +211,8 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .vertical-middle {
@@ -230,7 +250,7 @@ a:focus {
   -webkit-background-size: cover;
 }
 
-.body-video-bg > .section-video {
+.body-video-bg>.section-video {
   position: fixed;
   top: 0;
   left: 0;
@@ -293,7 +313,8 @@ a:focus {
   text-align: center !important;
 }
 
-.section-header-separator::before, .section-header-separator::after {
+.section-header-separator::before,
+.section-header-separator::after {
   content: '';
   position: absolute;
   width: 57px;
@@ -315,17 +336,17 @@ a:focus {
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 .mini-separator {
@@ -396,47 +417,55 @@ a:focus {
   top: 7px;
 }
 
-.btn.apple, .btn.androad {
+.btn.apple,
+.btn.androad {
   border-radius: 3px !important;
   padding: 9px 28px;
   height: 82px;
 }
 
-.btn.apple img, .btn.androad img {
+.btn.apple img,
+.btn.androad img {
   width: 35px;
   height: 100%;
   float: left;
 }
 
-.btn.apple .icon, .btn.androad .icon {
+.btn.apple .icon,
+.btn.androad .icon {
   font-size: 60px;
   float: left;
 }
 
-.btn.apple span, .btn.androad span {
+.btn.apple span,
+.btn.androad span {
   display: block;
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
 
-.btn.apple .group, .btn.androad .group {
+.btn.apple .group,
+.btn.androad .group {
   float: right;
 }
 
 .btn.apple .big,
-.btn.apple .small, .btn.androad .big,
+.btn.apple .small,
+.btn.androad .big,
 .btn.androad .small {
   text-align: left;
   margin-left: 7px;
   line-height: 30px;
 }
 
-.btn.apple .big, .btn.androad .big {
+.btn.apple .big,
+.btn.androad .big {
   font-size: 24px;
   font-weight: 400;
 }
 
-.btn.apple .small, .btn.androad .small {
+.btn.apple .small,
+.btn.androad .small {
   font-size: 16px;
 }
 
@@ -579,17 +608,17 @@ ul li {
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 /**
@@ -734,7 +763,18 @@ button:focus {
  * General CSS
  * -----------------
  */
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
 }
 
@@ -748,7 +788,8 @@ button:focus {
   padding: 20px 10px;
 }
 
-.white-vertion .blog-form-inner .contact-message, .white-vertion .blog-form-inner .form-control {
+.white-vertion .blog-form-inner .contact-message,
+.white-vertion .blog-form-inner .form-control {
   -webkit-box-shadow: 0 0px 2px 0 rgba(255, 255, 255, 0.8), 0 0px 1px 1px rgba(255, 255, 255, 0.8);
   box-shadow: 0 0px 2px 0 rgba(74, 71, 71, 0.8), 0 0px 1px 1px rgba(241, 241, 241, 0.8);
 }
@@ -885,7 +926,16 @@ button:focus {
   background-color: #000;
 }
 
-.white-vertion h1, .white-vertion h2, .white-vertion h3, .white-vertion h4, .white-vertion h5, .white-vertion h6, .white-vertion p, .white-vertion address, .white-vertion span, .white-vertion q {
+.white-vertion h1,
+.white-vertion h2,
+.white-vertion h3,
+.white-vertion h4,
+.white-vertion h5,
+.white-vertion h6,
+.white-vertion p,
+.white-vertion address,
+.white-vertion span,
+.white-vertion q {
   opacity: 0.8;
 }
 
@@ -947,32 +997,32 @@ button:focus {
 
 .white-vertion .shadow-1 {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion .mh-pricing .mh-pricing {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion .mh-blog .mh-blog-item {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion .mh-experince .mh-education-deatils .mh-education-item {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion .mh-work .mh-experience-deatils .mh-work-item {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion .mh-testimonial .mh-client-item {
   -webkit-box-shadow: 0px 10px 20px 4px #00000015;
-          box-shadow: 0px 10px 20px 4px #00000015;
+  box-shadow: 0px 10px 20px 4px #00000015;
 }
 
 .white-vertion.home-slider .mh-home .img-border {
@@ -995,7 +1045,11 @@ button:focus {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.white-vertion.home-slider .mh-black-header h2, .white-vertion.home-slider .mh-black-header h4, .white-vertion.home-slider .mh-black-header ul li, .white-vertion.home-slider .mh-black-header a, .white-vertion.home-slider .mh-black-header address {
+.white-vertion.home-slider .mh-black-header h2,
+.white-vertion.home-slider .mh-black-header h4,
+.white-vertion.home-slider .mh-black-header ul li,
+.white-vertion.home-slider .mh-black-header a,
+.white-vertion.home-slider .mh-black-header address {
   color: #fff;
 }
 
@@ -1003,7 +1057,11 @@ button:focus {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.white-vertion.home-video .mh-black-header h2, .white-vertion.home-video .mh-black-header h4, .white-vertion.home-video .mh-black-header ul li, .white-vertion.home-video .mh-black-header a, .white-vertion.home-video .mh-black-header address {
+.white-vertion.home-video .mh-black-header h2,
+.white-vertion.home-video .mh-black-header h4,
+.white-vertion.home-video .mh-black-header ul li,
+.white-vertion.home-video .mh-black-header a,
+.white-vertion.home-video .mh-black-header address {
   color: #fff;
   opacity: 0.9;
 }
@@ -1255,9 +1313,7 @@ button:focus {
   text-align: right;
 }
 
-.mh-rtl .mh-work .mh-experience-deatils
-.mh-work-item .work-responsibility
-li .fa {
+.mh-rtl .mh-work .mh-experience-deatils .mh-work-item .work-responsibility li .fa {
   margin-left: 10px;
 }
 
@@ -1287,11 +1343,11 @@ li .fa {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 100%;
   height: 100vh;
   z-index: 9999999;
@@ -1303,7 +1359,7 @@ li .fa {
 
 .section-loader .loader div {
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   position: absolute;
   border-width: 4px;
   border-style: solid;
@@ -1338,6 +1394,7 @@ li .fa {
     height: 0;
     opacity: 1;
   }
+
   100% {
     top: 57px;
     left: 57px;
@@ -1355,6 +1412,7 @@ li .fa {
     height: 0;
     opacity: 1;
   }
+
   100% {
     top: 57px;
     left: 57px;
@@ -1402,14 +1460,15 @@ li .fa {
   padding-left: 0;
   padding-right: 0;
 }
-.nav-zer{
+
+.nav-zer {
   display: block;
-  padding-top:8px;
+  padding-top: 8px;
   margin-right: .5rem;
-    margin-left: .5rem;
-    text-align:center;
-    padding-bottom:2px;
-  
+  margin-left: .5rem;
+  text-align: center;
+  padding-bottom: 2px;
+
 }
 
 .mh-header .navbar-nav li a:hover {
@@ -1774,7 +1833,8 @@ li .fa {
   opacity: 0.9;
 }
 
-.candidatos .parcial .info .eleito, .candidatos .parcial .info .segundo-turno {
+.candidatos .parcial .info .eleito,
+.candidatos .parcial .info .segundo-turno {
   padding: 0 5px 2px 5px;
   border-radius: 2px;
 }
@@ -1819,7 +1879,7 @@ li .fa {
 
 .percentual {
   -webkit-animation-name: animationProgress;
-          animation-name: animationProgress;
+  animation-name: animationProgress;
 }
 
 @-webkit-keyframes animationProgress {
@@ -1999,7 +2059,7 @@ li .fa {
 .mh-portfolio-modal-inner::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 10px #000;
-          box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
 }
 
 .mh-portfolio-modal-inner h2 {
@@ -2306,12 +2366,15 @@ li .fa {
 .mh-footer ::-webkit-input-placeholder {
   opacity: 0.9;
 }
+
 .mh-footer :-ms-input-placeholder {
   opacity: 0.9;
 }
+
 .mh-footer ::-ms-input-placeholder {
   opacity: 0.9;
 }
+
 .mh-footer ::placeholder {
   opacity: 0.9;
 }
@@ -2736,7 +2799,7 @@ li .fa {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-transform: translate3d(-20px, -10px, 0);
-          transform: translate3d(-20px, -10px, 0);
+  transform: translate3d(-20px, -10px, 0);
 }
 
 .old .navbar-collapse .nav li a {
@@ -3000,7 +3063,7 @@ li .fa {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-transform: translate3d(-20px, -10px, 0);
-          transform: translate3d(-20px, -10px, 0);
+  transform: translate3d(-20px, -10px, 0);
 }
 
 .new .navbar-collapse .nav li a {
@@ -3765,32 +3828,32 @@ BLOG Pagination
   margin-left: 10px;
 }
 
-.header-slider .slide-tablecell .slide-text > *:nth-child(1) {
+.header-slider .slide-tablecell .slide-text>*:nth-child(1) {
   -webkit-animation-duration: .3s;
-          animation-duration: .3s;
+  animation-duration: .3s;
 }
 
-.header-slider .slide-tablecell .slide-text > *:nth-child(2) {
+.header-slider .slide-tablecell .slide-text>*:nth-child(2) {
   -webkit-animation-duration: .3s;
-          animation-duration: .3s;
+  animation-duration: .3s;
   -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  animation-delay: .3s;
   margin-bottom: 30px;
 }
 
-.header-slider .slide-tablecell .slide-text > *:nth-child(3) {
+.header-slider .slide-tablecell .slide-text>*:nth-child(3) {
   -webkit-animation-duration: .3s;
-          animation-duration: .3s;
+  animation-duration: .3s;
   -webkit-animation-delay: .6s;
-          animation-delay: .6s;
+  animation-delay: .6s;
   margin-top: 30px;
 }
 
-.header-slider .slide-tablecell .slide-text > *:nth-child(4) {
+.header-slider .slide-tablecell .slide-text>*:nth-child(4) {
   -webkit-animation-duration: .3s;
-          animation-duration: .3s;
+  animation-duration: .3s;
   -webkit-animation-delay: .9s;
-          animation-delay: .9s;
+  animation-delay: .9s;
 }
 
 .header-slider .slide-tablecell .slide-text h1 {
@@ -3884,4 +3947,5 @@ BLOG Pagination
   margin-bottom: 30px;
   margin-top: 20px;
 }
+
 /*# sourceMappingURL=styles.css.map */
